--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -320,7 +320,7 @@
 }
 
 /*Profile Modal Styles*/
-/*.userProf {
+.userProf {
   text-align: center;
 }
 
@@ -330,5 +330,10 @@
   height: 45%;
   width: 45%;
 }
-*/
+
+#profileEditor {
+  margin-right: 100%;
+  background-color: white;
+}
+
 
